@@ -1,5 +1,5 @@
-libspectrum 0.3.0.1
-===================
+libspectrum 0.4.0
+=================
 
 libspectrum is a library which is designed to make the input and
 output of ZX Spectrum emulator files slightly easier than it would be
@@ -10,8 +10,8 @@ Currently supported are:
 
 * Snapshots: .z80, .szx, .sna (all read/write), .zxs, .sp., .snp and
   +D snapshots (read only).
-* Tape images: .tzx, .tap (read/write) and Warajevo .tap, Z80Em and
-  CSW version 1 (read only).
+* Tape images: .tzx, .tap, .spc, .sta and .ltp (read/write) and
+  Warajevo .tap, Z80Em and CSW version 1 (read only).
 * Input recordings: .rzx (read/write).
 * Timex cartridges: .dck (read only).
 * IDE hard disk images: .hdf (read/write).
@@ -50,4 +50,4 @@ released tarballs, you'll need to run `autogen.sh' before running
 'configure' for the first time.
 
 Philip Kendall <philip-fuse@shadowmagic.org.uk>
-11 May 2007
+18 December 2007
