@@ -25,7 +25,7 @@ AC_INIT(libspectrum.c)
 AM_CONFIG_HEADER(config.h)
 
 dnl Use automake to produce `Makefile.in'
-AM_INIT_AUTOMAKE(libspectrum, 0.3.0.1)
+AM_INIT_AUTOMAKE(libspectrum, 0.4.0)
 
 dnl Checks for programs.
 AC_PROG_CC
