@@ -22,7 +22,7 @@
 .\" E-mail: philip-fuse@shadowmagic.org.uk
 .\"
 .\"
-.TH libspectrum 3 "11th May, 2007" "Version 0.3.0.1" "Emulators"
+.TH libspectrum 3 "18th December, 2007" "Version 0.4.0" "Emulators"
 .\"
 .\"------------------------------------------------------------------
 .\"
