@@ -1,5 +1,5 @@
-libspectrum 0.x.x
-===================
+libspectrum 0.4.0
+=================
 
 libspectrum is a fairly simple library designed to make the handling
 of various ZX Spectrum emulator-related file formats easy.  So far it
@@ -7,9 +7,8 @@ handles:
 
 * Snapshots: .z80, .szx, .sna (all read/write), .zxs, .sp., .snp and
   +D snapshots (read only).
-* Tape images: .tzx, .tap, .spc, .sta and .ltp (read/write), Warajevo
-  .tap (read only),
-  
+* Tape images: .tzx, .tap, .spc, .sta and .ltp (read/write) and
+  Warajevo .tap, Z80Em and CSW version 1 (read only). 
 * Input recordings: .rzx (read/write).
 * Timex cartridges: .dck (read only).
 * IDE hard disk images: .hdf (read/write).
